# open-sol-bot

./: Makefile  config copy.toml  docker-compose.yaml  example.config.toml  gmgnDckerfile  pyproject.toml
app/gmgn/: Dockerfile  pyproject.toml
app/gmgn/gmgnbot/: AddressMonitor.py  TokenMontior.py  constants.py  main.py
app/gmgn/gmgnbot/Data/: GMGN.py  __init__.py
app/gmgn/gmgnbot/monitor/: copytrade.py  monitor.py
app/gmgnbot/: TokenMontior.py  constants.py  main.py
app/gmgnbot/Data/: GMGN.py
app/tg-bot/: Dockerfile
app/tg-bot/tg_bot/: templates.py
app/tg-bot/tg_bot/conversations/monitor/: create.py
app/tg-bot/tg_bot/services/: monitor.py
app/trading/: pyproject.toml
app/trading/trading/: main.py
app/trading/trading/transaction/builders/: jupiterlimit.py
app/wallet-tracker/wallet_tracker/: tx_monitor.py  tx_worker.py
app/wallet-tracker/wallet_tracker/geyser/: tx_subscriber.py
app/wallet-tracker/wallet_tracker/parser/: raw_tx.py
libs/common/common/: config.py
libs/common/common/cp/: monitor_events.py
libs/common/solbot_common/: config.py
libs/common/solbot_common/cp/: monitor_events.py  tx_event.py
libs/common/solbot_common/models/tg_bot/: copytrade.py
libs/common/solbot_common/utils/: jupiter.py
src/common/: config.py
src/common/types/: tx.py
src/gmgnbot/: AddressMonitor.py  TokenMontior.py  main.py
src/gmgnbot/Data/: CloudflareBypasser.py  GMGN.py  OKLine.py
src/tg_bot/: templates.py
src/tg_bot/conversations/monitor/: create.py
src/wallet_tracker/: tx_worker.py
src/wallet_tracker/geyser/: tx_subscriber.py
src/wallet_tracker/parser/: raw_tx.py
